--- a/YAZLAB2/Views/Kategori/Index.cshtml
+++ b/YAZLAB2/Views/Kategori/Index.cshtml
@@ -1,5 +1,32 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<YAZLAB2.Models.Kategori>
+
 @{
+    ViewData["Title"] = "Kategoriler";
 }
+
+<h2>@ViewData["Title"]</h2>
+
+<p>
+    <a href="@Url.Action("Create")" class="btn btn-primary">Yeni Kategori Ekle</a>
+</p>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Etkinlik Adı</th>
+            <th>İşlemler</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var kategori in Model)
+        {
+            <tr>
+                <td>@kategori.KategoriAdi</td>
+                <td>
+                    <a href="@Url.Action("Edit", new { id = kategori.KategoriId })" class="btn btn-warning">Düzenle</a>
+                    <a href="@Url.Action("Delete", new { id = kategori.KategoriId })" class="btn btn-danger">Sil</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
