--- a/YAZLAB2/Views/User/Register.cshtml
+++ b/YAZLAB2/Views/User/Register.cshtml
@@ -32,7 +32,6 @@
         <input type="text" class="form-control" id="TelefonNumarasi" name="TelefonNumarasi" value="@Model.TelefonNumarasi" required />
     </div>
 
-
     <div class="form-group">
         <label for="Konum">Konum</label>
         <input type="text" class="form-control" id="Konum" name="Konum" value="@Model.Konum" required />
@@ -46,10 +45,34 @@
     <div class="form-group">
         <label for="Cinsiyet">Cinsiyet</label>
         <select class="form-control" id="Cinsiyet" name="Cinsiyet" required>
-            <option value="Erkek" >Erkek</option>
-            <option value="Kadın" >Kadın</option>
+            <option value="Erkek">Erkek</option>
+            <option value="Kadın">Kadın</option>
         </select>
     </div>
+
+    <div class="form-group">
+        <label for="IlgiAlanlari">İlgi Alanları</label>
+        <div>
+            @foreach (var kategori in Model.Kategoriler)
+            {
+                <div class="form-check">
+                    <input type="checkbox"
+                           class="form-check-input"
+                           id="kategori_@kategori.Value"
+                           name="IlgiAlanlari"
+                           value="@kategori.Value"
+                    @if (Model.IlgiAlanlari != null && Model.IlgiAlanlari.Contains(int.Parse(kategori.Value)))
+                    {
+                        @:checked
+                    } />
+                    <label class="form-check-label" for="kategori_@kategori.Value">
+                        @kategori.Text
+                    </label>
+                </div>
+            }
+        </div>
+    </div>
+
 
     <div class="form-group">
         <label for="ProfilFoto">Profil Fotoğrafı</label>
@@ -61,8 +84,5 @@
         <input type="password" class="form-control" id="Şifre" name="Şifre" required />
     </div>
 
-
     <button type="submit" class="btn btn-primary">Kayıt Ol</button>
 </form>
-
-
