--- a/YAZLAB2/Views/Etkinlik/Create.cshtml
+++ b/YAZLAB2/Views/Etkinlik/Create.cshtml
@@ -31,6 +31,18 @@
         <label for="Konum">Konum</label>
         <input type="text" class="form-control" id="Konum" name="Konum" value="@Model.Konum" required />
     </div>
+    <div class="form-group">
+        <label for="KategoriId">Kategori</label>
+        <select class="form-control" id="KategoriId" name="KategoriId" required>
+            <option value="">Kategori Seçin</option>
+            @foreach (var kategori in (List<YAZLAB2.Models.Kategori>)ViewData["Kategoriler"])
+            {
+                <option value="@kategori.KategoriId" )>
+                    @kategori.KategoriAdi
+                </option>
+            }
+        </select>
+    </div>
 
     <button type="submit" class="btn btn-primary">Kaydet</button>
     <a href="@Url.Action("Index")" class="btn btn-secondary">Geri</a>
