--- a/YAZLAB2/Views/Etkinlik/Details.cshtml
+++ b/YAZLAB2/Views/Etkinlik/Details.cshtml
@@ -13,9 +13,9 @@
     <p><strong>Konum:</strong> @Model.Konum</p>
 </div>
 
-<!-- Katılım Butonu -->
+<a href="@Url.Action("Index")" class="btn btn-secondary">Geri</a>
 <form asp-action="Katil" method="post" asp-route-etkinlikId="@Model.EtkinlikId">
     <button type="submit" class="btn btn-primary">Etkinliğe Katıl</button>
 </form>
 
-<a href="@Url.Action("UserHubArea")" class="btn btn-secondary">Geri</a>
+<a href="@Url.Action("EtkinlikMesajlari", "Mesaj", new { etkinlikId = Model.EtkinlikId })" class="btn btn-secondary">Yorumlara Git</a>
