--- a/YAZLAB2/Views/User/UserHubArea.cshtml
+++ b/YAZLAB2/Views/User/UserHubArea.cshtml
@@ -8,6 +8,12 @@
     <div>
         <a href="/Etkinlik/Index" class="btn btn-success">Etkinlik Git</a>
         <a href="/User/Profile" class="btn btn-success">Profil Git</a>
+        <a href="/Mesaj/Mesajlarım" class="btn btn-success">Mesajlarım Git</a>
+        <a href="/Mesaj/MesajGonder" class="btn btn-success">MesajGonder Git</a>
+        <a href="/Account/ForgotPassword" class="btn btn-success">ForgotPassword Git</a>
+
+
+
     </div>
 
     <h1>Hoşgeldin, @User.Identity.Name</h1>
